K8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-svc
spec:
  type: NodePort
  selector:
    app: go-app
  ports:
    #svc port
    - port: 80 
      #container port
      targetPort: 8000
      nodePort: 30007
